fix: force 'firstVisit' to No for returning users in autofill logic

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
                 hydrateForm(data) {
                     if (data.site) this.form.site = data.site;
                     if (data.familyName) this.form.familyName = data.familyName;
+                    if (data.firstVisit) this.form.firstVisit = data.firstVisit;
                     if (data.membership) this.form.membership = data.membership;
                     if (data.contactNumber) this.form.contactNumber = data.contactNumber;
                     
